--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 spring:
-    datasource:
-        url: jdbc:h2:mem:mydb
-        username: local
-        password: local123
-        driver-class-name: org.h2.Driver
+  config:
+    import: application-security.yml
+
+
